[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/Level1/Debug.gd" type="Script" id=1]
[ext_resource path="res://levels/Level1/DiveZoneExtents.gd" type="Script" id=2]
[ext_resource path="res://levels/Level3/Waves/wave1.gd" type="Script" id=3]

[node name="wave1" type="Node2D"]
script = ExtResource( 3 )

[node name="viewport_hint" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -320, -180, -320, 180, 320, 180, 320, -180 )

[node name="GruntFormationPoints" type="Node2D" parent="."]
modulate = Color( 1, 0.913725, 0, 1 )

[node name="C" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 262, 0 )

[node name="C2" type="Position2D" parent="GruntFormationPoints/C"]
position = Vector2( 24, -97 )

[node name="C3" type="Position2D" parent="GruntFormationPoints/C"]
position = Vector2( 45, 144 )

[node name="C4" type="Position2D" parent="GruntFormationPoints/C"]
position = Vector2( 28, 104 )

[node name="C5" type="Position2D" parent="GruntFormationPoints/C"]
position = Vector2( 19, -171 )

[node name="B1" type="Node2D" parent="GruntFormationPoints"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -96, 8 )

[node name="C" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 10, -133 )

[node name="C23" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 12, -167 )

[node name="C2" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 58, -160 )

[node name="C3" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 8, -91 )

[node name="C4" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 56, -115 )

[node name="C5" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 9, -45 )

[node name="C7" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 9, -6 )

[node name="C8" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 60, -32 )

[node name="C9" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 57, 56 )

[node name="C24" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 57, 0 )

[node name="C11" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 57, 91 )

[node name="C13" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 57, 118 )

[node name="C14" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 6, 116 )

[node name="C15" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 6, 147 )

[node name="C12" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 6, 89 )

[node name="C10" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 6, 55 )

[node name="C6" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 60, -72 )

[node name="M" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 56, 149 )

[node name="C16" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 109, -168 )

[node name="C17" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 107, -123 )

[node name="C18" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 111, -40 )

[node name="C19" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 111, 13 )

[node name="C20" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 108, 71 )

[node name="C25" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 57, 27 )

[node name="C26" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 6, 26 )

[node name="C27" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 108, 42 )

[node name="C21" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 108, 98 )

[node name="C22" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 111, -80 )

[node name="M2" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 107, 129 )

[node name="M3" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 106, 155 )

[node name="Zones" type="Node2D" parent="."]

[node name="TopZone" type="Node2D" parent="Zones"]
position = Vector2( 0, -7 )
script = ExtResource( 2 )
TopLeft = Vector2( 61, -173 )
BottomRight = Vector2( 303, -121 )

[node name="TopLeft" type="Position2D" parent="Zones/TopZone"]
position = Vector2( 61, -173 )

[node name="BottomRight" type="Position2D" parent="Zones/TopZone"]
position = Vector2( 303, -121 )

[node name="BottomZone" type="Node2D" parent="Zones"]
position = Vector2( 0, -7 )
script = ExtResource( 2 )
TopLeft = Vector2( 69, 133 )
BottomRight = Vector2( 303, 188 )

[node name="TopLeft" type="Position2D" parent="Zones/BottomZone"]
position = Vector2( 69, 133 )

[node name="BottomRight" type="Position2D" parent="Zones/BottomZone"]
position = Vector2( 303, 188 )

[node name="EyeZone" type="Node2D" parent="Zones"]
position = Vector2( 0, -7 )
script = ExtResource( 2 )
TopLeft = Vector2( 158, -173 )
BottomRight = Vector2( 303, 188 )

[node name="TopLeft" type="Position2D" parent="Zones/EyeZone"]
position = Vector2( 158, -173 )

[node name="BottomRight" type="Position2D" parent="Zones/EyeZone"]
position = Vector2( 303, 188 )

[node name="DiveZone" type="Node2D" parent="Zones"]
position = Vector2( 0, -7 )
script = ExtResource( 2 )
TopLeft = Vector2( -319, -173 )
BottomRight = Vector2( -189, 187 )

[node name="TopLeft" type="Position2D" parent="Zones/DiveZone"]
position = Vector2( -319, -173 )

[node name="BottomRight" type="Position2D" parent="Zones/DiveZone"]
position = Vector2( -189, 187 )

[node name="Spawners" type="Node2D" parent="."]
modulate = Color( 0.992157, 0.0823529, 1, 1 )

[node name="C" type="Position2D" parent="Spawners"]
position = Vector2( 169, -153 )

[node name="C2" type="Position2D" parent="Spawners"]
position = Vector2( 176, 158 )

[node name="EnemyDump" type="Node2D" parent="."]

[node name="BulletsDump" type="Node2D" parent="."]

[node name="Debug" type="Label" parent="."]
anchor_left = -0.488
anchor_top = -0.486
anchor_right = -0.488
anchor_bottom = -0.486
margin_left = 178.0
margin_top = -177.0
margin_right = 307.0
margin_bottom = -163.0
script = ExtResource( 1 )

[node name="shot_timer" type="Timer" parent="."]
